// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process image metadata: lamppost-metadata 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "[14], Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AlreadyApplied": true,
    "Aperture": 11,
    "ApertureValue": 11,
    "ApplicationRecordVersion": 4,
    "ApproximateFocusDistance": 10.6,
    "Artist": "Dave Townsend",
    "AutoLateralCA": 1,
    "BitsPerSample": 8,
    "Blacks2012": 0,
    "BlueHue": 0,
    "BlueMatrixColumn": "0.14307 0.06061 0.7141",
    "BlueSaturation": 0,
    "BlueTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "By-line": "Dave Townsend",
    "CFAPattern": "[Red,Green][Green,Blue]",
    "CMMFlags": "Not Embedded, Independent",
    "CameraProfile": "Camera Standard",
    "CameraProfileDigest": "1D0E94C4CD633470D5CCB636631C48B3",
    "CircleOfConfusion": "0.020 mm",
    "City": "Hood River",
    "Clarity2012": "+58",
    "CodedCharacterSet": "UTF8",
    "ColorComponents": 3,
    "ColorNoiseReduction": 25,
    "ColorNoiseReductionDetail": 50,
    "ColorNoiseReductionSmoothness": 50,
    "ColorSpace": "sRGB",
    "ColorSpaceData": "RGB ",
    "ColorTemperature": 5050,
    "ColorTransform": "YCbCr",
    "Compression": "JPEG (old-style)",
    "ConnectionSpaceIlluminant": "0.9642 1 0.82491",
    "Contrast": "Normal",
    "Contrast2012": "+43",
    "ConvertToGrayscale": false,
    "Country": "USA",
    "Country-PrimaryLocationName": "USA",
    "CreateDate": "2018-08-22T18:51:25.000-07:00",
    "Creator": Array [
      "Dave Townsend",
    ],
    "CreatorTool": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "CurrentIPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "CustomRendered": "Normal",
    "DCTEncodeVersion": 100,
    "DOF": "5.84 m (8.43 - 14.27 m)",
    "DateCreated": "2018-08-22T18:51:25.800-07:00",
    "DateTimeCreated": "2018-08-22T18:51:25.000-07:00",
    "DateTimeOriginal": "2018-08-22T18:51:25.000-07:00",
    "DefringeGreenAmount": 0,
    "DefringeGreenHueHi": 60,
    "DefringeGreenHueLo": 40,
    "DefringePurpleAmount": 0,
    "DefringePurpleHueHi": 70,
    "DefringePurpleHueLo": 30,
    "Dehaze": "+16",
    "DerivedFrom": Object {
      "DocumentID": "xmp.did:4356928d-7f34-4374-9cbe-b079555e903f",
      "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
      "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    },
    "DeviceAttributes": "Reflective, Glossy, Positive, Color",
    "DeviceManufacturer": "Hewlett-Packard",
    "DeviceMfgDesc": "IEC http://www.iec.ch",
    "DeviceModel": "sRGB",
    "DeviceModelDesc": "IEC 61966-2.1 Default RGB colour space - sRGB",
    "DigitalCreationDate": "2018-08-22",
    "DigitalCreationDateTime": "2018-08-22T18:51:25.000-07:00",
    "DigitalCreationTime": "18:51:25",
    "DigitalZoomRatio": 1,
    "DisplayedUnitsX": "inches",
    "DisplayedUnitsY": "inches",
    "DistortionCorrectionAlreadyApplied": true,
    "DocumentID": "xmp.did:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "ExifByteOrder": "Little-endian (Intel, II)",
    "ExifVersion": "0230",
    "Exposure2012": "+0.75",
    "ExposureCompensation": 0,
    "ExposureMode": "Auto",
    "ExposureProgram": "Program AE",
    "ExposureTime": "1/2000",
    "FNumber": 11,
    "FOV": "14.4 deg",
    "FileName": "lamppost.jpg",
    "FileSize": "54 kB",
    "FileSource": "Digital Camera",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Flash": "Off, Did not fire",
    "FocalLength": "95.0 mm",
    "FocalLength35efl": "95.0 mm (35 mm equivalent: 142.0 mm)",
    "FocalLengthIn35mmFormat": "142 mm",
    "Format": "image/jpeg",
    "GPSAltitude": 28.4597,
    "GPSLatitude": 45.7150516666667,
    "GPSLatitudeRef": "N",
    "GPSLongitude": -121.517781666667,
    "GPSLongitudeRef": "W",
    "GPSPosition": "45.7150516666667 -121.517781666667",
    "GPSVersionID": "2 2 0 0",
    "GainControl": "Low gain up",
    "GrainAmount": 0,
    "GreenHue": 0,
    "GreenMatrixColumn": "0.38515 0.71687 0.09708",
    "GreenSaturation": 0,
    "GreenTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "HasCrop": false,
    "HasSettings": true,
    "HierarchicalSubject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "Highlights2012": -61,
    "History": Array [
      Object {
        "Action": "derived",
        "Parameters": "converted from image/x-nikon-nef to image/dng, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.4 (Macintosh)",
        "When": "2018:08:22 21:32-07:00",
      },
      Object {
        "Action": "derived",
        "Parameters": "converted from image/dng to image/jpeg, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
        "When": "2018:09:11 21:51:01-07:00",
      },
    ],
    "HueAdjustmentAqua": 0,
    "HueAdjustmentBlue": 0,
    "HueAdjustmentGreen": 0,
    "HueAdjustmentMagenta": 0,
    "HueAdjustmentOrange": 0,
    "HueAdjustmentPurple": 0,
    "HueAdjustmentRed": 0,
    "HueAdjustmentYellow": 0,
    "HyperfocalDistance": "40.82 m",
    "IPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "ISO": 400,
    "ImageHeight": 331,
    "ImageNumber": 72430,
    "ImageSize": "500x331",
    "ImageWidth": 500,
    "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "Keywords": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "LateralChromaticAberrationCorrectionAlreadyApplied": true,
    "Lens": "18.0-200.0 mm f/3.5-5.6",
    "LensID": "18.0-200.0 mm f/3.5-5.6",
    "LensInfo": "18-200mm f/3.5-5.6",
    "LensManualDistortionAmount": 0,
    "LensModel": "18.0-200.0 mm f/3.5-5.6",
    "LensProfileChromaticAberrationScale": 100,
    "LensProfileDigest": "0393084BF82E26E09731385C1949BE99",
    "LensProfileDistortionScale": 100,
    "LensProfileEnable": 1,
    "LensProfileFilename": "NIKON D90 (Nikon AF-S DX NIKKOR 18-200mm f3.5-5.6G ED VR II) - RAW.lcp",
    "LensProfileName": "Adobe (Nikon AF-S DX NIKKOR 18-200mm f/3.5-5.6G ED VR II)",
    "LensProfileSetup": "LensDefaults",
    "LensProfileVignettingScale": 100,
    "LightSource": "Unknown",
    "LightValue": 15.9,
    "Location": "Hood River Waterfront Park",
    "Look": Object {
      "Name": "",
    },
    "Luminance": "76.03647 80 87.12462",
    "LuminanceAdjustmentAqua": 0,
    "LuminanceAdjustmentBlue": 0,
    "LuminanceAdjustmentGreen": 0,
    "LuminanceAdjustmentMagenta": 0,
    "LuminanceAdjustmentOrange": 0,
    "LuminanceAdjustmentPurple": 0,
    "LuminanceAdjustmentRed": 0,
    "LuminanceAdjustmentYellow": 0,
    "LuminanceSmoothing": 0,
    "MIMEType": "image/jpeg",
    "Make": "NIKON CORPORATION",
    "MaxApertureValue": 5.3,
    "MeasurementBacking": "0 0 0",
    "MeasurementFlare": "0.999%",
    "MeasurementGeometry": "Unknown",
    "MeasurementIlluminant": "D65",
    "MeasurementObserver": "CIE 1931",
    "MediaBlackPoint": "0 0 0",
    "MediaWhitePoint": "0.95045 1 1.08905",
    "Megapixels": 0.166,
    "MetadataDate": "2018-09-11T21:51:01.000-07:00",
    "MeteringMode": "Multi-segment",
    "Model": "NIKON D7000",
    "ModifyDate": "2018-09-11T21:51:01.000-07:00",
    "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    "OverrideLookVignette": false,
    "ParametricDarks": 0,
    "ParametricHighlightSplit": 75,
    "ParametricHighlights": 0,
    "ParametricLights": 0,
    "ParametricMidtoneSplit": 50,
    "ParametricShadowSplit": 25,
    "ParametricShadows": 0,
    "PerspectiveAspect": 0,
    "PerspectiveHorizontal": 0,
    "PerspectiveRotate": 0,
    "PerspectiveScale": 100,
    "PerspectiveUpright": 0,
    "PerspectiveVertical": 0,
    "PerspectiveX": 0,
    "PerspectiveY": 0,
    "PhotoshopThumbnail": "(Binary data 5886 bytes, use -b option to extract)",
    "PostCropVignetteAmount": 0,
    "PrimaryPlatform": "Microsoft Corporation",
    "ProcessVersion": 10,
    "ProfileCMMType": "Linotronic",
    "ProfileClass": "Display Device Profile",
    "ProfileConnectionSpace": "XYZ ",
    "ProfileCopyright": "Copyright (c) 1998 Hewlett-Packard Company",
    "ProfileCreator": "Hewlett-Packard",
    "ProfileDateTime": "1998-02-09T06:49:00.000-08:00",
    "ProfileDescription": "sRGB IEC61966-2.1",
    "ProfileFileSignature": "acsp",
    "ProfileID": 0,
    "ProfileVersion": "2.1.0",
    "Province-State": "Oregon",
    "Rating": 4,
    "RawFileName": "180822-185125.nef",
    "RedHue": 0,
    "RedMatrixColumn": "0.43607 0.22249 0.01392",
    "RedSaturation": 0,
    "RedTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "RenderingIntent": "Perceptual",
    "ResolutionUnit": "inches",
    "RetouchAreas": Array [
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009825,
            "SizeY": 0.009825,
            "What": "Mask/Ellipse",
            "X": 0.264686,
            "Y": 0.426716,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.415687,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.28924,
        "SpotType": "heal",
      },
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009901,
            "SizeY": 0.009901,
            "What": "Mask/Ellipse",
            "X": 0.443005,
            "Y": 0.014113,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.056086,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.368736,
        "SpotType": "heal",
      },
    ],
    "RetouchInfo": Array [
      "centerX = 0.264686, centerY = 0.426716, radius = 0.009825, sourceState = sourceAutoComputed, sourceX = 0.289240, sourceY = 0.415687, spotType = heal",
      "centerX = 0.443005, centerY = 0.014113, radius = 0.009901, sourceState = sourceAutoComputed, sourceX = 0.368736, sourceY = 0.056086, spotType = heal",
    ],
    "Saturation": "Normal",
    "SaturationAdjustmentAqua": 0,
    "SaturationAdjustmentBlue": 0,
    "SaturationAdjustmentGreen": 0,
    "SaturationAdjustmentMagenta": 0,
    "SaturationAdjustmentOrange": 0,
    "SaturationAdjustmentPurple": 0,
    "SaturationAdjustmentRed": 0,
    "SaturationAdjustmentYellow": 0,
    "ScaleFactor35efl": 1.5,
    "SceneCaptureType": "Standard",
    "SceneType": "Directly photographed",
    "SensingMethod": "One-chip color area",
    "SensitivityType": "Recommended Exposure Index",
    "SerialNumber": 3140722,
    "ShadowTint": 0,
    "Shadows2012": "+47",
    "SharpenDetail": 25,
    "SharpenEdgeMasking": 0,
    "SharpenRadius": "+1.0",
    "Sharpness": "Normal",
    "ShutterSpeed": "1/2000",
    "ShutterSpeedValue": "1/2000",
    "Software": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "SplitToningBalance": 0,
    "SplitToningHighlightHue": 0,
    "SplitToningHighlightSaturation": 0,
    "SplitToningShadowHue": 0,
    "SplitToningShadowSaturation": 0,
    "State": "Oregon",
    "Sub-location": "Hood River Waterfront Park",
    "SubSecCreateDate": "2018-08-22T18:51:25.800-07:00",
    "SubSecDateTimeOriginal": "2018-08-22T18:51:25.800-07:00",
    "SubSecTimeDigitized": 80,
    "SubSecTimeOriginal": 80,
    "Subject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "SubjectDistanceRange": "Unknown",
    "Technology": "Cathode Ray Tube Display",
    "ThumbnailImage": "(Binary data 5886 bytes, use -b option to extract)",
    "ThumbnailLength": 5886,
    "ThumbnailOffset": 1130,
    "TimeCreated": "18:51:25",
    "Tint": "+4",
    "ToneCurve": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveBlue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveGreen": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveName": "Linear",
    "ToneCurveName2012": "Linear",
    "ToneCurvePV2012": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Blue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Green": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Red": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveRed": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneMapStrength": 0,
    "UprightCenterMode": 0,
    "UprightCenterNormX": 0.5,
    "UprightCenterNormY": 0.5,
    "UprightFocalLength35mm": 35,
    "UprightFocalMode": 0,
    "UprightFourSegmentsCount": 0,
    "UprightPreview": false,
    "UprightTransformCount": 6,
    "UprightVersion": 151388160,
    "Version": 10.5,
    "Vibrance": 0,
    "ViewingCondDesc": "Reference Viewing Condition in IEC61966-2.1",
    "ViewingCondIlluminant": "19.6445 20.3718 16.8089",
    "ViewingCondIlluminantType": "D50",
    "ViewingCondSurround": "3.92889 4.07439 3.36179",
    "VignetteAmount": 0,
    "VignetteCorrectionAlreadyApplied": true,
    "WhiteBalance": "Auto",
    "Whites2012": 0,
    "XMPToolkit": "Adobe XMP Core 5.6-c140 79.160451, 2017/05/06-01:08:21        ",
    "XResolution": 240,
    "YCbCrSubSampling": "YCbCr4:4:4 (1 1)",
    "YResolution": 240,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "Testname.jpg",
  "fileSize": 55084,
  "frameRate": null,
  "height": 331,
  "mimetype": "image/jpeg",
  "uploaded": "2015-06-21T02:56:53.000Z",
  "width": 500,
}
`;

exports[`Process second file: newfile-metadata 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "[14], Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AlreadyApplied": true,
    "Aperture": 11,
    "ApertureValue": 11,
    "ApplicationRecordVersion": 4,
    "ApproximateFocusDistance": 10.6,
    "Artist": "Dave Townsend",
    "AutoLateralCA": 1,
    "BitsPerSample": 8,
    "Blacks2012": 0,
    "BlueHue": 0,
    "BlueMatrixColumn": "0.14307 0.06061 0.7141",
    "BlueSaturation": 0,
    "BlueTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "By-line": "Dave Townsend",
    "CFAPattern": "[Red,Green][Green,Blue]",
    "CMMFlags": "Not Embedded, Independent",
    "CameraProfile": "Camera Standard",
    "CameraProfileDigest": "1D0E94C4CD633470D5CCB636631C48B3",
    "CircleOfConfusion": "0.020 mm",
    "City": "Hood River",
    "Clarity2012": "+58",
    "CodedCharacterSet": "UTF8",
    "ColorComponents": 3,
    "ColorNoiseReduction": 25,
    "ColorNoiseReductionDetail": 50,
    "ColorNoiseReductionSmoothness": 50,
    "ColorSpace": "sRGB",
    "ColorSpaceData": "RGB ",
    "ColorTemperature": 5050,
    "ColorTransform": "YCbCr",
    "Compression": "JPEG (old-style)",
    "ConnectionSpaceIlluminant": "0.9642 1 0.82491",
    "Contrast": "Normal",
    "Contrast2012": "+43",
    "ConvertToGrayscale": false,
    "Country": "USA",
    "Country-PrimaryLocationName": "USA",
    "CreateDate": "2018-08-22T18:51:25.000-07:00",
    "Creator": Array [
      "Dave Townsend",
    ],
    "CreatorTool": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "CurrentIPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "CustomRendered": "Normal",
    "DCTEncodeVersion": 100,
    "DOF": "5.84 m (8.43 - 14.27 m)",
    "DateCreated": "2018-08-22T18:51:25.800-07:00",
    "DateTimeCreated": "2018-08-22T18:51:25.000-07:00",
    "DateTimeOriginal": "2018-08-22T18:51:25.000-07:00",
    "DefringeGreenAmount": 0,
    "DefringeGreenHueHi": 60,
    "DefringeGreenHueLo": 40,
    "DefringePurpleAmount": 0,
    "DefringePurpleHueHi": 70,
    "DefringePurpleHueLo": 30,
    "Dehaze": "+16",
    "DerivedFrom": Object {
      "DocumentID": "xmp.did:4356928d-7f34-4374-9cbe-b079555e903f",
      "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
      "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    },
    "DeviceAttributes": "Reflective, Glossy, Positive, Color",
    "DeviceManufacturer": "Hewlett-Packard",
    "DeviceMfgDesc": "IEC http://www.iec.ch",
    "DeviceModel": "sRGB",
    "DeviceModelDesc": "IEC 61966-2.1 Default RGB colour space - sRGB",
    "DigitalCreationDate": "2018-08-22",
    "DigitalCreationDateTime": "2018-08-22T18:51:25.000-07:00",
    "DigitalCreationTime": "18:51:25",
    "DigitalZoomRatio": 1,
    "DisplayedUnitsX": "inches",
    "DisplayedUnitsY": "inches",
    "DistortionCorrectionAlreadyApplied": true,
    "DocumentID": "xmp.did:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "ExifByteOrder": "Little-endian (Intel, II)",
    "ExifVersion": "0230",
    "Exposure2012": "+0.75",
    "ExposureCompensation": 0,
    "ExposureMode": "Auto",
    "ExposureProgram": "Program AE",
    "ExposureTime": "1/2000",
    "FNumber": 11,
    "FOV": "14.4 deg",
    "FileName": "lamppost.jpg",
    "FileSize": "54 kB",
    "FileSource": "Digital Camera",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Flash": "Off, Did not fire",
    "FocalLength": "95.0 mm",
    "FocalLength35efl": "95.0 mm (35 mm equivalent: 142.0 mm)",
    "FocalLengthIn35mmFormat": "142 mm",
    "Format": "image/jpeg",
    "GPSAltitude": 28.4597,
    "GPSLatitude": 45.7150516666667,
    "GPSLatitudeRef": "N",
    "GPSLongitude": -121.517781666667,
    "GPSLongitudeRef": "W",
    "GPSPosition": "45.7150516666667 -121.517781666667",
    "GPSVersionID": "2 2 0 0",
    "GainControl": "Low gain up",
    "GrainAmount": 0,
    "GreenHue": 0,
    "GreenMatrixColumn": "0.38515 0.71687 0.09708",
    "GreenSaturation": 0,
    "GreenTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "HasCrop": false,
    "HasSettings": true,
    "HierarchicalSubject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "Highlights2012": -61,
    "History": Array [
      Object {
        "Action": "derived",
        "Parameters": "converted from image/x-nikon-nef to image/dng, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.4 (Macintosh)",
        "When": "2018:08:22 21:32-07:00",
      },
      Object {
        "Action": "derived",
        "Parameters": "converted from image/dng to image/jpeg, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
        "When": "2018:09:11 21:51:01-07:00",
      },
    ],
    "HueAdjustmentAqua": 0,
    "HueAdjustmentBlue": 0,
    "HueAdjustmentGreen": 0,
    "HueAdjustmentMagenta": 0,
    "HueAdjustmentOrange": 0,
    "HueAdjustmentPurple": 0,
    "HueAdjustmentRed": 0,
    "HueAdjustmentYellow": 0,
    "HyperfocalDistance": "40.82 m",
    "IPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "ISO": 400,
    "ImageHeight": 331,
    "ImageNumber": 72430,
    "ImageSize": "500x331",
    "ImageWidth": 500,
    "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "Keywords": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "LateralChromaticAberrationCorrectionAlreadyApplied": true,
    "Lens": "18.0-200.0 mm f/3.5-5.6",
    "LensID": "18.0-200.0 mm f/3.5-5.6",
    "LensInfo": "18-200mm f/3.5-5.6",
    "LensManualDistortionAmount": 0,
    "LensModel": "18.0-200.0 mm f/3.5-5.6",
    "LensProfileChromaticAberrationScale": 100,
    "LensProfileDigest": "0393084BF82E26E09731385C1949BE99",
    "LensProfileDistortionScale": 100,
    "LensProfileEnable": 1,
    "LensProfileFilename": "NIKON D90 (Nikon AF-S DX NIKKOR 18-200mm f3.5-5.6G ED VR II) - RAW.lcp",
    "LensProfileName": "Adobe (Nikon AF-S DX NIKKOR 18-200mm f/3.5-5.6G ED VR II)",
    "LensProfileSetup": "LensDefaults",
    "LensProfileVignettingScale": 100,
    "LightSource": "Unknown",
    "LightValue": 15.9,
    "Location": "Hood River Waterfront Park",
    "Look": Object {
      "Name": "",
    },
    "Luminance": "76.03647 80 87.12462",
    "LuminanceAdjustmentAqua": 0,
    "LuminanceAdjustmentBlue": 0,
    "LuminanceAdjustmentGreen": 0,
    "LuminanceAdjustmentMagenta": 0,
    "LuminanceAdjustmentOrange": 0,
    "LuminanceAdjustmentPurple": 0,
    "LuminanceAdjustmentRed": 0,
    "LuminanceAdjustmentYellow": 0,
    "LuminanceSmoothing": 0,
    "MIMEType": "image/jpeg",
    "Make": "NIKON CORPORATION",
    "MaxApertureValue": 5.3,
    "MeasurementBacking": "0 0 0",
    "MeasurementFlare": "0.999%",
    "MeasurementGeometry": "Unknown",
    "MeasurementIlluminant": "D65",
    "MeasurementObserver": "CIE 1931",
    "MediaBlackPoint": "0 0 0",
    "MediaWhitePoint": "0.95045 1 1.08905",
    "Megapixels": 0.166,
    "MetadataDate": "2018-09-11T21:51:01.000-07:00",
    "MeteringMode": "Multi-segment",
    "Model": "NIKON D7000",
    "ModifyDate": "2018-09-11T21:51:01.000-07:00",
    "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    "OverrideLookVignette": false,
    "ParametricDarks": 0,
    "ParametricHighlightSplit": 75,
    "ParametricHighlights": 0,
    "ParametricLights": 0,
    "ParametricMidtoneSplit": 50,
    "ParametricShadowSplit": 25,
    "ParametricShadows": 0,
    "PerspectiveAspect": 0,
    "PerspectiveHorizontal": 0,
    "PerspectiveRotate": 0,
    "PerspectiveScale": 100,
    "PerspectiveUpright": 0,
    "PerspectiveVertical": 0,
    "PerspectiveX": 0,
    "PerspectiveY": 0,
    "PhotoshopThumbnail": "(Binary data 5886 bytes, use -b option to extract)",
    "PostCropVignetteAmount": 0,
    "PrimaryPlatform": "Microsoft Corporation",
    "ProcessVersion": 10,
    "ProfileCMMType": "Linotronic",
    "ProfileClass": "Display Device Profile",
    "ProfileConnectionSpace": "XYZ ",
    "ProfileCopyright": "Copyright (c) 1998 Hewlett-Packard Company",
    "ProfileCreator": "Hewlett-Packard",
    "ProfileDateTime": "1998-02-09T06:49:00.000-08:00",
    "ProfileDescription": "sRGB IEC61966-2.1",
    "ProfileFileSignature": "acsp",
    "ProfileID": 0,
    "ProfileVersion": "2.1.0",
    "Province-State": "Oregon",
    "Rating": 4,
    "RawFileName": "180822-185125.nef",
    "RedHue": 0,
    "RedMatrixColumn": "0.43607 0.22249 0.01392",
    "RedSaturation": 0,
    "RedTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "RenderingIntent": "Perceptual",
    "ResolutionUnit": "inches",
    "RetouchAreas": Array [
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009825,
            "SizeY": 0.009825,
            "What": "Mask/Ellipse",
            "X": 0.264686,
            "Y": 0.426716,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.415687,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.28924,
        "SpotType": "heal",
      },
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009901,
            "SizeY": 0.009901,
            "What": "Mask/Ellipse",
            "X": 0.443005,
            "Y": 0.014113,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.056086,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.368736,
        "SpotType": "heal",
      },
    ],
    "RetouchInfo": Array [
      "centerX = 0.264686, centerY = 0.426716, radius = 0.009825, sourceState = sourceAutoComputed, sourceX = 0.289240, sourceY = 0.415687, spotType = heal",
      "centerX = 0.443005, centerY = 0.014113, radius = 0.009901, sourceState = sourceAutoComputed, sourceX = 0.368736, sourceY = 0.056086, spotType = heal",
    ],
    "Saturation": "Normal",
    "SaturationAdjustmentAqua": 0,
    "SaturationAdjustmentBlue": 0,
    "SaturationAdjustmentGreen": 0,
    "SaturationAdjustmentMagenta": 0,
    "SaturationAdjustmentOrange": 0,
    "SaturationAdjustmentPurple": 0,
    "SaturationAdjustmentRed": 0,
    "SaturationAdjustmentYellow": 0,
    "ScaleFactor35efl": 1.5,
    "SceneCaptureType": "Standard",
    "SceneType": "Directly photographed",
    "SensingMethod": "One-chip color area",
    "SensitivityType": "Recommended Exposure Index",
    "SerialNumber": 3140722,
    "ShadowTint": 0,
    "Shadows2012": "+47",
    "SharpenDetail": 25,
    "SharpenEdgeMasking": 0,
    "SharpenRadius": "+1.0",
    "Sharpness": "Normal",
    "ShutterSpeed": "1/2000",
    "ShutterSpeedValue": "1/2000",
    "Software": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "SplitToningBalance": 0,
    "SplitToningHighlightHue": 0,
    "SplitToningHighlightSaturation": 0,
    "SplitToningShadowHue": 0,
    "SplitToningShadowSaturation": 0,
    "State": "Oregon",
    "Sub-location": "Hood River Waterfront Park",
    "SubSecCreateDate": "2018-08-22T18:51:25.800-07:00",
    "SubSecDateTimeOriginal": "2018-08-22T18:51:25.800-07:00",
    "SubSecTimeDigitized": 80,
    "SubSecTimeOriginal": 80,
    "Subject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "SubjectDistanceRange": "Unknown",
    "Technology": "Cathode Ray Tube Display",
    "ThumbnailImage": "(Binary data 5886 bytes, use -b option to extract)",
    "ThumbnailLength": 5886,
    "ThumbnailOffset": 1130,
    "TimeCreated": "18:51:25",
    "Tint": "+4",
    "ToneCurve": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveBlue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveGreen": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveName": "Linear",
    "ToneCurveName2012": "Linear",
    "ToneCurvePV2012": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Blue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Green": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Red": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveRed": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneMapStrength": 0,
    "UprightCenterMode": 0,
    "UprightCenterNormX": 0.5,
    "UprightCenterNormY": 0.5,
    "UprightFocalLength35mm": 35,
    "UprightFocalMode": 0,
    "UprightFourSegmentsCount": 0,
    "UprightPreview": false,
    "UprightTransformCount": 6,
    "UprightVersion": 151388160,
    "Version": 10.5,
    "Vibrance": 0,
    "ViewingCondDesc": "Reference Viewing Condition in IEC61966-2.1",
    "ViewingCondIlluminant": "19.6445 20.3718 16.8089",
    "ViewingCondIlluminantType": "D50",
    "ViewingCondSurround": "3.92889 4.07439 3.36179",
    "VignetteAmount": 0,
    "VignetteCorrectionAlreadyApplied": true,
    "WhiteBalance": "Auto",
    "Whites2012": 0,
    "XMPToolkit": "Adobe XMP Core 5.6-c140 79.160451, 2017/05/06-01:08:21        ",
    "XResolution": 240,
    "YCbCrSubSampling": "YCbCr4:4:4 (1 1)",
    "YResolution": 240,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "NewFile.jpg",
  "fileSize": 55084,
  "frameRate": null,
  "height": 331,
  "mimetype": "image/jpeg",
  "uploaded": "2020-01-02T02:56:53.000Z",
  "width": 500,
}
`;

exports[`Process video metadata: video-metadata 1`] = `
Object {
  "bitRate": 18664868,
  "duration": 1.74,
  "exif": Object {
    "AndroidManufacturer": "motorola",
    "AndroidModel": "moto g(7)",
    "AndroidVersion": 9,
    "AndroidVideoTemporalLayersCount": "(Binary data 4 bytes, use -b option to extract)",
    "AudioBitsPerSample": 16,
    "AudioChannels": 2,
    "AudioFormat": "mp4a",
    "AudioSampleRate": 48000,
    "AvgBitrate": "16.8 Mbps",
    "Balance": 0,
    "BitDepth": 24,
    "ColorRepresentation": "nclx 1 1 1",
    "CompatibleBrands": Array [
      "isom",
      "mp42",
    ],
    "CompressorID": "avc1",
    "CreateDate": "2019-11-03T23:07:19.000-08:00",
    "CurrentTime": "0 s",
    "Duration": 1.74,
    "FileName": "video.mp4",
    "FileSize": "3.9 MB",
    "FileType": "MP4",
    "FileTypeExtension": "mp4",
    "GPSCoordinates": "45.5484 -122.6187",
    "GPSLatitude": 45.5484,
    "GPSLongitude": -122.6187,
    "GPSPosition": "45.5484 -122.6187",
    "GraphicsMode": "srcCopy",
    "HandlerDescription": "SoundHandle",
    "HandlerType": "Audio Track",
    "ImageHeight": 1080,
    "ImageSize": "1920x1080",
    "ImageWidth": 1920,
    "MIMEType": "video/mp4",
    "MajorBrand": "MP4 v2 [ISO 14496-14]",
    "MatrixStructure": "1 0 0 0 1 0 0 0 1",
    "MediaCreateDate": "2019-11-03T23:07:19.000-08:00",
    "MediaDataOffset": 405381,
    "MediaDataSize": 3654228,
    "MediaDuration": 1.68627083333333,
    "MediaHeaderVersion": 0,
    "MediaModifyDate": "2019-11-03T23:07:19.000-08:00",
    "MediaTimeScale": 48000,
    "Megapixels": 2.1,
    "MinorVersion": "0.0.0",
    "ModifyDate": "2019-11-03T23:07:19.000-08:00",
    "MovieHeaderVersion": 0,
    "NextTrackID": 3,
    "OpColor": "0 0 0",
    "PixelAspectRatio": "65536:65536",
    "PosterTime": "0 s",
    "PreferredRate": 1,
    "PreferredVolume": "100.00%",
    "PreviewDuration": 0,
    "PreviewTime": "0 s",
    "Rotation": 90,
    "SelectionDuration": 0,
    "SelectionTime": "0 s",
    "SourceImageHeight": 1080,
    "SourceImageWidth": 1920,
    "TimeScale": 1000,
    "TrackCreateDate": "2019-11-03T23:07:19.000-08:00",
    "TrackDuration": 1.74,
    "TrackHeaderVersion": 0,
    "TrackID": 1,
    "TrackLayer": 0,
    "TrackModifyDate": "2019-11-03T23:07:19.000-08:00",
    "TrackVolume": "0.00%",
    "VideoFrameRate": 59.202,
    "XResolution": 72,
    "YResolution": 72,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "Testvideo.mp4",
  "fileSize": 4059609,
  "frameRate": 59.202207150247155,
  "height": 1080,
  "mimetype": "video/mp4;codecs=\\"avc1.64002a,mp4a.40.2\\"",
  "uploaded": "2017-01-02T02:56:53.000Z",
  "width": 1920,
}
`;

exports[`Update old version: reprocessed-metadata 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "[14], Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AlreadyApplied": true,
    "Aperture": 11,
    "ApertureValue": 11,
    "ApplicationRecordVersion": 4,
    "ApproximateFocusDistance": 10.6,
    "Artist": "Dave Townsend",
    "AutoLateralCA": 1,
    "BitsPerSample": 8,
    "Blacks2012": 0,
    "BlueHue": 0,
    "BlueMatrixColumn": "0.14307 0.06061 0.7141",
    "BlueSaturation": 0,
    "BlueTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "By-line": "Dave Townsend",
    "CFAPattern": "[Red,Green][Green,Blue]",
    "CMMFlags": "Not Embedded, Independent",
    "CameraProfile": "Camera Standard",
    "CameraProfileDigest": "1D0E94C4CD633470D5CCB636631C48B3",
    "CircleOfConfusion": "0.020 mm",
    "City": "Hood River",
    "Clarity2012": "+58",
    "CodedCharacterSet": "UTF8",
    "ColorComponents": 3,
    "ColorNoiseReduction": 25,
    "ColorNoiseReductionDetail": 50,
    "ColorNoiseReductionSmoothness": 50,
    "ColorSpace": "sRGB",
    "ColorSpaceData": "RGB ",
    "ColorTemperature": 5050,
    "ColorTransform": "YCbCr",
    "Compression": "JPEG (old-style)",
    "ConnectionSpaceIlluminant": "0.9642 1 0.82491",
    "Contrast": "Normal",
    "Contrast2012": "+43",
    "ConvertToGrayscale": false,
    "Country": "USA",
    "Country-PrimaryLocationName": "USA",
    "CreateDate": "2018-08-22T18:51:25.000-07:00",
    "Creator": Array [
      "Dave Townsend",
    ],
    "CreatorTool": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "CurrentIPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "CustomRendered": "Normal",
    "DCTEncodeVersion": 100,
    "DOF": "5.84 m (8.43 - 14.27 m)",
    "DateCreated": "2018-08-22T18:51:25.800-07:00",
    "DateTimeCreated": "2018-08-22T18:51:25.000-07:00",
    "DateTimeOriginal": "2018-08-22T18:51:25.000-07:00",
    "DefringeGreenAmount": 0,
    "DefringeGreenHueHi": 60,
    "DefringeGreenHueLo": 40,
    "DefringePurpleAmount": 0,
    "DefringePurpleHueHi": 70,
    "DefringePurpleHueLo": 30,
    "Dehaze": "+16",
    "DerivedFrom": Object {
      "DocumentID": "xmp.did:4356928d-7f34-4374-9cbe-b079555e903f",
      "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
      "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    },
    "DeviceAttributes": "Reflective, Glossy, Positive, Color",
    "DeviceManufacturer": "Hewlett-Packard",
    "DeviceMfgDesc": "IEC http://www.iec.ch",
    "DeviceModel": "sRGB",
    "DeviceModelDesc": "IEC 61966-2.1 Default RGB colour space - sRGB",
    "DigitalCreationDate": "2018-08-22",
    "DigitalCreationDateTime": "2018-08-22T18:51:25.000-07:00",
    "DigitalCreationTime": "18:51:25",
    "DigitalZoomRatio": 1,
    "DisplayedUnitsX": "inches",
    "DisplayedUnitsY": "inches",
    "DistortionCorrectionAlreadyApplied": true,
    "DocumentID": "xmp.did:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "ExifByteOrder": "Little-endian (Intel, II)",
    "ExifVersion": "0230",
    "Exposure2012": "+0.75",
    "ExposureCompensation": 0,
    "ExposureMode": "Auto",
    "ExposureProgram": "Program AE",
    "ExposureTime": "1/2000",
    "FNumber": 11,
    "FOV": "14.4 deg",
    "FileName": "original",
    "FileSize": "54 kB",
    "FileSource": "Digital Camera",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Flash": "Off, Did not fire",
    "FocalLength": "95.0 mm",
    "FocalLength35efl": "95.0 mm (35 mm equivalent: 142.0 mm)",
    "FocalLengthIn35mmFormat": "142 mm",
    "Format": "image/jpeg",
    "GPSAltitude": 28.4597,
    "GPSLatitude": 45.7150516666667,
    "GPSLatitudeRef": "N",
    "GPSLongitude": -121.517781666667,
    "GPSLongitudeRef": "W",
    "GPSPosition": "45.7150516666667 -121.517781666667",
    "GPSVersionID": "2 2 0 0",
    "GainControl": "Low gain up",
    "GrainAmount": 0,
    "GreenHue": 0,
    "GreenMatrixColumn": "0.38515 0.71687 0.09708",
    "GreenSaturation": 0,
    "GreenTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "HasCrop": false,
    "HasSettings": true,
    "HierarchicalSubject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "Highlights2012": -61,
    "History": Array [
      Object {
        "Action": "derived",
        "Parameters": "converted from image/x-nikon-nef to image/dng, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.4 (Macintosh)",
        "When": "2018:08:22 21:32-07:00",
      },
      Object {
        "Action": "derived",
        "Parameters": "converted from image/dng to image/jpeg, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
        "When": "2018:09:11 21:51:01-07:00",
      },
    ],
    "HueAdjustmentAqua": 0,
    "HueAdjustmentBlue": 0,
    "HueAdjustmentGreen": 0,
    "HueAdjustmentMagenta": 0,
    "HueAdjustmentOrange": 0,
    "HueAdjustmentPurple": 0,
    "HueAdjustmentRed": 0,
    "HueAdjustmentYellow": 0,
    "HyperfocalDistance": "40.82 m",
    "IPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "ISO": 400,
    "ImageHeight": 331,
    "ImageNumber": 72430,
    "ImageSize": "500x331",
    "ImageWidth": 500,
    "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "Keywords": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "LateralChromaticAberrationCorrectionAlreadyApplied": true,
    "Lens": "18.0-200.0 mm f/3.5-5.6",
    "LensID": "18.0-200.0 mm f/3.5-5.6",
    "LensInfo": "18-200mm f/3.5-5.6",
    "LensManualDistortionAmount": 0,
    "LensModel": "18.0-200.0 mm f/3.5-5.6",
    "LensProfileChromaticAberrationScale": 100,
    "LensProfileDigest": "0393084BF82E26E09731385C1949BE99",
    "LensProfileDistortionScale": 100,
    "LensProfileEnable": 1,
    "LensProfileFilename": "NIKON D90 (Nikon AF-S DX NIKKOR 18-200mm f3.5-5.6G ED VR II) - RAW.lcp",
    "LensProfileName": "Adobe (Nikon AF-S DX NIKKOR 18-200mm f/3.5-5.6G ED VR II)",
    "LensProfileSetup": "LensDefaults",
    "LensProfileVignettingScale": 100,
    "LightSource": "Unknown",
    "LightValue": 15.9,
    "Location": "Hood River Waterfront Park",
    "Look": Object {
      "Name": "",
    },
    "Luminance": "76.03647 80 87.12462",
    "LuminanceAdjustmentAqua": 0,
    "LuminanceAdjustmentBlue": 0,
    "LuminanceAdjustmentGreen": 0,
    "LuminanceAdjustmentMagenta": 0,
    "LuminanceAdjustmentOrange": 0,
    "LuminanceAdjustmentPurple": 0,
    "LuminanceAdjustmentRed": 0,
    "LuminanceAdjustmentYellow": 0,
    "LuminanceSmoothing": 0,
    "MIMEType": "image/jpeg",
    "Make": "NIKON CORPORATION",
    "MaxApertureValue": 5.3,
    "MeasurementBacking": "0 0 0",
    "MeasurementFlare": "0.999%",
    "MeasurementGeometry": "Unknown",
    "MeasurementIlluminant": "D65",
    "MeasurementObserver": "CIE 1931",
    "MediaBlackPoint": "0 0 0",
    "MediaWhitePoint": "0.95045 1 1.08905",
    "Megapixels": 0.166,
    "MetadataDate": "2018-09-11T21:51:01.000-07:00",
    "MeteringMode": "Multi-segment",
    "Model": "NIKON D7000",
    "ModifyDate": "2018-09-11T21:51:01.000-07:00",
    "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    "OverrideLookVignette": false,
    "ParametricDarks": 0,
    "ParametricHighlightSplit": 75,
    "ParametricHighlights": 0,
    "ParametricLights": 0,
    "ParametricMidtoneSplit": 50,
    "ParametricShadowSplit": 25,
    "ParametricShadows": 0,
    "PerspectiveAspect": 0,
    "PerspectiveHorizontal": 0,
    "PerspectiveRotate": 0,
    "PerspectiveScale": 100,
    "PerspectiveUpright": 0,
    "PerspectiveVertical": 0,
    "PerspectiveX": 0,
    "PerspectiveY": 0,
    "PhotoshopThumbnail": "(Binary data 5886 bytes, use -b option to extract)",
    "PostCropVignetteAmount": 0,
    "PrimaryPlatform": "Microsoft Corporation",
    "ProcessVersion": 10,
    "ProfileCMMType": "Linotronic",
    "ProfileClass": "Display Device Profile",
    "ProfileConnectionSpace": "XYZ ",
    "ProfileCopyright": "Copyright (c) 1998 Hewlett-Packard Company",
    "ProfileCreator": "Hewlett-Packard",
    "ProfileDateTime": "1998-02-09T06:49:00.000-08:00",
    "ProfileDescription": "sRGB IEC61966-2.1",
    "ProfileFileSignature": "acsp",
    "ProfileID": 0,
    "ProfileVersion": "2.1.0",
    "Province-State": "Oregon",
    "Rating": 4,
    "RawFileName": "180822-185125.nef",
    "RedHue": 0,
    "RedMatrixColumn": "0.43607 0.22249 0.01392",
    "RedSaturation": 0,
    "RedTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "RenderingIntent": "Perceptual",
    "ResolutionUnit": "inches",
    "RetouchAreas": Array [
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009825,
            "SizeY": 0.009825,
            "What": "Mask/Ellipse",
            "X": 0.264686,
            "Y": 0.426716,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.415687,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.28924,
        "SpotType": "heal",
      },
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009901,
            "SizeY": 0.009901,
            "What": "Mask/Ellipse",
            "X": 0.443005,
            "Y": 0.014113,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.056086,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.368736,
        "SpotType": "heal",
      },
    ],
    "RetouchInfo": Array [
      "centerX = 0.264686, centerY = 0.426716, radius = 0.009825, sourceState = sourceAutoComputed, sourceX = 0.289240, sourceY = 0.415687, spotType = heal",
      "centerX = 0.443005, centerY = 0.014113, radius = 0.009901, sourceState = sourceAutoComputed, sourceX = 0.368736, sourceY = 0.056086, spotType = heal",
    ],
    "Saturation": "Normal",
    "SaturationAdjustmentAqua": 0,
    "SaturationAdjustmentBlue": 0,
    "SaturationAdjustmentGreen": 0,
    "SaturationAdjustmentMagenta": 0,
    "SaturationAdjustmentOrange": 0,
    "SaturationAdjustmentPurple": 0,
    "SaturationAdjustmentRed": 0,
    "SaturationAdjustmentYellow": 0,
    "ScaleFactor35efl": 1.5,
    "SceneCaptureType": "Standard",
    "SceneType": "Directly photographed",
    "SensingMethod": "One-chip color area",
    "SensitivityType": "Recommended Exposure Index",
    "SerialNumber": 3140722,
    "ShadowTint": 0,
    "Shadows2012": "+47",
    "SharpenDetail": 25,
    "SharpenEdgeMasking": 0,
    "SharpenRadius": "+1.0",
    "Sharpness": "Normal",
    "ShutterSpeed": "1/2000",
    "ShutterSpeedValue": "1/2000",
    "Software": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "SplitToningBalance": 0,
    "SplitToningHighlightHue": 0,
    "SplitToningHighlightSaturation": 0,
    "SplitToningShadowHue": 0,
    "SplitToningShadowSaturation": 0,
    "State": "Oregon",
    "Sub-location": "Hood River Waterfront Park",
    "SubSecCreateDate": "2018-08-22T18:51:25.800-07:00",
    "SubSecDateTimeOriginal": "2018-08-22T18:51:25.800-07:00",
    "SubSecTimeDigitized": 80,
    "SubSecTimeOriginal": 80,
    "Subject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "SubjectDistanceRange": "Unknown",
    "Technology": "Cathode Ray Tube Display",
    "ThumbnailImage": "(Binary data 5886 bytes, use -b option to extract)",
    "ThumbnailLength": 5886,
    "ThumbnailOffset": 1130,
    "TimeCreated": "18:51:25",
    "Tint": "+4",
    "ToneCurve": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveBlue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveGreen": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveName": "Linear",
    "ToneCurveName2012": "Linear",
    "ToneCurvePV2012": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Blue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Green": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Red": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveRed": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneMapStrength": 0,
    "UprightCenterMode": 0,
    "UprightCenterNormX": 0.5,
    "UprightCenterNormY": 0.5,
    "UprightFocalLength35mm": 35,
    "UprightFocalMode": 0,
    "UprightFourSegmentsCount": 0,
    "UprightPreview": false,
    "UprightTransformCount": 6,
    "UprightVersion": 151388160,
    "Version": 10.5,
    "Vibrance": 0,
    "ViewingCondDesc": "Reference Viewing Condition in IEC61966-2.1",
    "ViewingCondIlluminant": "19.6445 20.3718 16.8089",
    "ViewingCondIlluminantType": "D50",
    "ViewingCondSurround": "3.92889 4.07439 3.36179",
    "VignetteAmount": 0,
    "VignetteCorrectionAlreadyApplied": true,
    "WhiteBalance": "Auto",
    "Whites2012": 0,
    "XMPToolkit": "Adobe XMP Core 5.6-c140 79.160451, 2017/05/06-01:08:21        ",
    "XResolution": 240,
    "YCbCrSubSampling": "YCbCr4:4:4 (1 1)",
    "YResolution": 240,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "oldname.jpg",
  "fileSize": 55084,
  "frameRate": null,
  "height": 331,
  "mimetype": "image/jpeg",
  "uploaded": "2020-03-01T01:01:01.000Z",
  "width": 500,
}
`;
